--- a/app/views/users/_s_user.html.erb
+++ b/app/views/users/_s_user.html.erb
@@ -1,1 +1,16 @@
-<li class="list-group-item"><%= "#{s_user.name} |-----| #{s_user.email}" %></li>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Email</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% users.each do |user| %>
+      <tr>
+        <td><%= user.name %></td>
+        <td><%= user.email %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
