--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-xl-6">
-    <%= form_with url: users_search_path do |f| %>
+    <%= form_with method: :get do |f| %>
       <div class="container mt-4">
         <div class="input-group">
           <%= f.text_field :query, placeholder: 'Search', class: 'form-control rounded' %>
@@ -12,6 +12,7 @@
         </div>
       </div>
     <% end %>
+    <%= render 's_user', users: @s_users %>
   </div>
   <div class="col-xl-6">
     <table>
