--- a/app/views/users/_s_user.html.erb
+++ b/app/views/users/_s_user.html.erb
@@ -6,7 +6,7 @@
     </tr>
   </thead>
   <tbody>
-    <% users.each do |user| %>
+    <% users&.each do |user| %>
       <tr>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
