--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
 <h1>Editing User</h1>
 
-<%= render 'form', user: @user %>
+<%= turbo_frame_tag "user" do %>
+  <%= render 'form', user: @user %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+  <%= link_to 'Show', @user %> |
+  <%= link_to 'Back', users_path, data: { "turbo-frame": "_top" } %>
+<% end %>
