--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,32 +17,11 @@
        </div>
       <% end %>
 
-      <%= render partial: "users/listing" %>
-      
+      <%= render "users/listing", users: @searched_users %>
+
     </div>
     <div class="col-xl-6">
-      <table>
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th><%= link_to 'New User', new_user_path %></th>
-            <th colspan="3"></th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% @users.each do |user| %>
-            <tr>
-              <td><%= user.name %></td>
-              <td><%= user.email %></td>
-              <td><%= link_to 'Show', user %></td>
-              <td><%= link_to 'Edit', edit_user_path(user) %></td>
-              <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+      <%= render 'users/all_users', users: @users %>
     </div>
   </div>
 </div>
