updates for country data

--- a/app/views/users/_s_user.html.erb
+++ b/app/views/users/_s_user.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <th scope="col">Name</th>
       <th scope="col">Email</th>
+      <th scope="col">Country</th>
     </tr>
   </thead>
   <tbody>
