--- a/app/views/users/_all_users.html.erb
+++ b/app/views/users/_all_users.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <th>Name</th>
       <th>Email</th>
+      <th>City</th>
       <th><%= link_to 'New User', new_user_path %></th>
       <th colspan="3"></th>
     </tr>
@@ -13,6 +14,7 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
+        <td><%= user.city.name %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
