--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="col-xl-3">
-      <%= render 'cities/all_cities', cities: @cities %>
+      <%= render 'cities/all_cities', cities: @filters['cities'] %>
     </div>
     <div class="col-xl-5">
       <h1 class="text-center">Users</h1>
