--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,10 +2,10 @@
   <p id="notice"><%= notice %></p>
 
   <div class="row">
-    <div class="col-xl-3">
+    <div class="col-xl-5">
       <%= render 'cities/all_cities', cities: @filters['cities'] %>
     </div>
-    <div class="col-xl-5">
+    <div class="col-xl-7">
       <h1 class="text-center">Users</h1>
       <%= form_with url: search_users_path do |form| %>
 
@@ -23,8 +23,7 @@
       <%= render "users/listing", users: @searched_users %>
 
     </div>
-    <div class="col-xl-4">
-      <%= render 'users/all_users', users: @users %>
-    </div>
   </div>
 </div>
+
+<%= javascript_pack_tag 'users/index' %>
