--- a/app/views/cities/_all_cities.html.erb
+++ b/app/views/cities/_all_cities.html.erb
@@ -9,8 +9,16 @@
   <tbody>
     <% cities.each do |key, filter| %>
       <tr>
-        <% city = City.find(key) %>
-        <td><%= link_to city.name + " (#{filter[:size]})", "?filter_citty_ids=#{filter[:key]}" %></td>
+        <td><%= link_to '', class: 'cities_filter_items',
+                                             data: { disable_with: false } do %>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="<%= key %>"
+                                        id="flexCheckIndeterminate-<%= key %>">
+            <label class="form-check-label" for="flexCheckIndeterminate-<%= key %>">
+              <%= City.find(key).name + " (#{filter[:size]})" %>
+            </label>
+          </div>
+        <% end %></td>
       </tr>
     <% end %>
   </tbody>
