--- a/app/views/cities/_all_cities.html.erb
+++ b/app/views/cities/_all_cities.html.erb
@@ -7,12 +7,11 @@
   </thead>
 
   <tbody>
-    <span id="cities-filter-status" data-cities-filter-status=<%= params[:cities_ids] %> disabled></span>
+    <span disabled id="cities-filter-status" data-cities-filter-status='<%= params[:cityIds] %>'></span>
     <% cities.each do |key, filter| %>
       <tr>
-        <td><%= link_to '', class: 'cities_filter_items',
-                                             data: { disable_with: false } do %>
-          <div class="form-check">
+        <td><%= link_to '', data: { disable_with: false } do %>
+          <div class="form-check cities_filter_items">
             <input class="form-check-input" type="checkbox" value="<%= key %>"
                                         id="flexCheckIndeterminate-<%= key %>">
             <label class="form-check-label" for="flexCheckIndeterminate-<%= key %>">
@@ -22,8 +21,5 @@
         <% end %></td>
       </tr>
     <% end %>
-    <tr>
-      <td><%= link_to 'Test params', '' %></td>
-    </tr>
   </tbody>
 </table>
