--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,7 @@
        </div>
       <% end %>
 
-      <%= render "users/listing", users: @searched_users %>
+      <%= render "users/listing", users: @users %>
 
     </div>
   </div>
