--- a/app/views/cities/_all_cities.html.erb
+++ b/app/views/cities/_all_cities.html.erb
@@ -10,15 +10,17 @@
     <span disabled id="cities-filter-status" data-cities-filter-status='<%= params[:cityIds] %>'></span>
     <% cities.each do |key, filter| %>
       <tr>
-        <td><%= link_to '', data: { disable_with: false } do %>
-          <div class="form-check cities_filter_items">
-            <input class="form-check-input" type="checkbox" value="<%= key %>"
-                                        id="flexCheckIndeterminate-<%= key %>">
-            <label class="form-check-label" for="flexCheckIndeterminate-<%= key %>">
-              <%= City.find(key).name + " (#{filter[:size]})" %>
-            </label>
-          </div>
-        <% end %></td>
+        <td>
+          <%= link_to '', data: { disable_with: false } do %>
+            <div class="form-check cities_filter_items">
+              <input class="form-check-input" type="checkbox" value="<%= key %>"
+                                          id="flexCheckIndeterminate-<%= key %>">
+              <label class="form-check-label" for="flexCheckIndeterminate-<%= key %>">
+                <%= City.find(key).name + " (#{filter[:size]})" %>
+              </label>
+            </div>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
