--- a/app/views/cities/_all_cities.html.erb
+++ b/app/views/cities/_all_cities.html.erb
@@ -7,7 +7,7 @@
   </thead>
 
   <tbody>
-    <span disabled id="cities-filter-status" data-cities-filter-status='<%= params[:cityIds] %>'></span>
+    <span disabled id="cities-filter-status" data-cities-filter-status='<%= params[:city_ids] %>'></span>
     <% cities.each do |key, filter| %>
       <tr>
         <td>
