--- a/app/views/cities/_all_cities.html.erb
+++ b/app/views/cities/_all_cities.html.erb
@@ -11,7 +11,7 @@
       <tr>
         <td>
           <%= link_to '', data: { disable_with: false } do %>
-            <div class="form-check cities_filter_items">
+            <div class="form-check city_filter_items">
               <input class="form-check-input" type="checkbox" value="<%= key %>"
                                           id="flexCheckIndeterminate-<%= key %>">
               <label class="form-check-label" for="flexCheckIndeterminate-<%= key %>">
