--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,19 @@
 .form-check {
-  cursor: pointer;
+  margin: 0 10px;
+}
+
+.form-check-label {
+  font-size: 13px;
+}
+
+.filter {
+  margin-bottom: 20px;
+}
+
+.users-header {
+  font-weight: bold;
+}
+
+.users-details {
+  font-size: 14px;
 }
