--- a/app/views/users/_listing.html.erb
+++ b/app/views/users/_listing.html.erb
@@ -1,29 +1,31 @@
-<table id="userListing" class="table">
+<div id="userListing">
   <% if users&.exists? %>
-    <thead>
-      <tr class="row">
-        <th scope="col" class="col-xl-3">Name</th>
-        <th scope="col" class="col-xl-3">Email</th>
-        <th scope="col" class="col-xl-3">Seniority</th>
-        <th scope="col" class="col-xl-3">City</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% users.each do |user| %>
-        <tr class="row">
-          <td class="col-xl-3"><%= user.name %></td>
-          <td class="col-xl-3"><%= user.email %></td>
-          <td class="col-xl-3"><%= user.seniority %></td>
-          <td class="col-xl-3"><%= City.find(user.city_id).name %></td>
-        </tr>
-      <% end %>
-
-
-    </tbody>
+    <div class="row users-header py-2">
+      <div class="col-xl-3">
+        <span>Name</span>
+      </div>
+      <div class="col-xl-3">
+        <span>Email</span>
+      </div>
+      <div class="col-xl-3">
+        <span>Seniority</span>
+      </div>
+      <div class="col-xl-3">
+        <span>City</span>
+      </div>
+      <hr class="mt-1 mb-0">
+    </div>
+    <% users.each do |user| %>
+      <div class="row my-1 users-details">
+        <span class="col-xl-3"><%= user.name %></span>
+        <span class="col-xl-3"><%= user.email %></span>
+        <span class="col-xl-3"><%= user.seniority %></span>
+        <span class="col-xl-3"><%= City.find(user.city_id).name %></span>
+      </div>
+    <% end %>
   <% else %>
-    <tr class="text-center">
-      <td class="col-xl-12 p-5"><em class="fs-6">Hmm.., it's empty 🤔</em></td>
-    </tr>
+    <div class="text-center">
+      <div class="col-xl-12 p-5"><span class="fs-6">Hmm.., it's empty 🤔</span></div>
+    </div>
   <% end %>
-</table>
+</div>
