--- a/app/views/users/_seniorities.html.erb
+++ b/app/views/users/_seniorities.html.erb
@@ -1,26 +1,14 @@
-<table>
-  <thead>
-    <tr>
-      <th>Seniority name</th>
-      <th colspan="1"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% seniorities.each do |key, filter| %>
-      <tr>
-        <td>
-          <%= link_to '', data: { disable_with: false } do %>
-            <div class="form-check seniority_filter_items">
-              <input class="form-check-input" type="checkbox" value="<%= key %>"
-                                          id="flexCheckIndeterminate-<%= key %>">
-              <label class="form-check-label" for="flexCheckIndeterminate-<%= key %>">
-                <%= key + " (#{filter[:size]})" %>
-              </label>
-            </div>
-          <% end %>
-        </td>
-      </tr>
+<div class="filter">
+  <h6>Seniority name</h6>
+  <% seniorities.each do |key, filter| %>
+    <%= link_to '', data: { disable_with: false } do %>
+      <div class="form-check seniority_filter_items">
+        <input class="form-check-input" type="checkbox" value="<%= key %>"
+                                    id="flexCheckIndeterminate-<%= key %>">
+        <label class="form-check-label" for="flexCheckIndeterminate-<%= key %>">
+          <%= key + " (#{filter[:size]})" %>
+        </label>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  <% end %>
+</div>
