--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
       <%= form_with url: search_users_path do |form| %>
 
 
-       <div class="container mt-4">
+       <div class="container my-4">
          <div class="input-group">
            <%= form.text_field 'query', placeholder: 'Enter search terms...',
                                                 class: 'form-control rounded' %>
