chore(app) remove trash and update style

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,13 +1,17 @@
-.form-check {
-  margin: 0 10px;
-}
-
-.form-check-label {
-  font-size: 13px;
-}
-
 .filter {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+
+  h6 {
+    margin: 2px;
+  }
+
+  .form-check {
+    margin: 0 10px;
+
+    .form-check-label {
+      font-size: 13px;
+    }
+  }
 }
 
 .users-header {
