feature(javascript/views) add show more-less method with its style

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,6 +12,11 @@
       font-size: 13px;
     }
   }
+
+  .showMoreLessButton {
+    border: none;
+    color: cornflowerblue;
+  }
 }
 
 .users-header {
