--- a/app/views/users/_seniorities.html.erb
+++ b/app/views/users/_seniorities.html.erb
@@ -1,14 +1,18 @@
 <div class="filter">
   <h6>Seniority name</h6>
-  <% seniorities.each do |key, filter| %>
-    <%= link_to '', data: { disable_with: false } do %>
-      <div class="form-check seniority_filter_items">
-        <input class="form-check-input" type="checkbox" value="<%= key %>"
-                                    id="flexCheckIndeterminate-<%= key %>">
-        <label class="form-check-label" for="flexCheckIndeterminate-<%= key %>">
-          <%= key + " (#{filter[:size]})" %>
-        </label>
-      </div>
+  <div data-controller='show-more-less'>
+    <% seniorities.each do |key, filter| %>
+      <%= link_to '', data: { disable_with: false } do %>
+        <div class="form-check seniority_filter_items" data-show-more-less-target='item'>
+          <input class="form-check-input" type="checkbox" value="<%= key %>"
+                                      id="flexCheckIndeterminate-<%= key %>">
+          <label class="form-check-label" for="flexCheckIndeterminate-<%= key %>">
+            <%= key + " (#{filter[:size]})" %>
+          </label>
+        </div>
+      <% end %>
     <% end %>
-  <% end %>
+    <button type="button" name="button" data-action='show-more-less#showLess' data-show-more-less-target='lessControl' class='showMoreLessButton'>Show less ↑</button>
+    <button type="button" name="button" data-action='show-more-less#showMore' data-show-more-less-target='moreControl' class='showMoreLessButton'>Show more ↓</button>
+  </div>
 </div>
