--- a/app/views/users/_seniorities.html.erb
+++ b/app/views/users/_seniorities.html.erb
@@ -12,7 +12,13 @@
         </div>
       <% end %>
     <% end %>
-    <button type="button" name="button" data-action='show-more-less#showLess' data-show-more-less-target='lessControl' class='showMoreLessButton'>Show less ↑</button>
-    <button type="button" name="button" data-action='show-more-less#showMore' data-show-more-less-target='moreControl' class='showMoreLessButton'>Show more ↓</button>
+    <button type="button" name="button"
+            data-action='show-more-less#showLess'
+            data-show-more-less-target='lessControl'
+            class='show-more-less-button'>Show less ↑</button>
+    <button type="button" name="button"
+            data-action='show-more-less#showMore'
+            data-show-more-less-target='moreControl'
+            class='show-more-less-button'>Show more ↓</button>
   </div>
 </div>
