--- a/app/views/users/_seniorities.html.erb
+++ b/app/views/users/_seniorities.html.erb
@@ -5,7 +5,7 @@
       <div class="form-check seniority_filter_items" data-show-more-less-target='item'>
         <input class="form-check-input" type="checkbox" value="<%= key %>"
                                     id="flexCheckIndeterminate-<%= key %>">
-        <label class="form-check-label" for="flexCheckIndeterminate-<%= key %>">
+        <label class="form-check-label">
           <%= key + " (#{filter[:size]})" %>
         </label>
       </div>
