refactor(views) localize and remove repeats

--- a/app/views/users/_seniorities.html.erb
+++ b/app/views/users/_seniorities.html.erb
@@ -1,5 +1,5 @@
 <div class="filter">
-  <h6>Seniority name</h6>
+  <h6><%= t '.seniority_filter' %></h6>
   <div data-controller='toggle-menu'>
     <% seniorities.each do |key, filter| %>
       <div class="form-check seniority_filter_items" data-toggle-menu-target='item'>
@@ -10,13 +10,6 @@
         </label>
       </div>
     <% end %>
-    <button type="button" name="button"
-            data-action='toggle-menu#showLess'
-            data-toggle-menu-target='lessControl'
-            class='toggle-menu-button'>Show less ↑</button>
-    <button type="button" name="button"
-            data-action='toggle-menu#showMore'
-            data-toggle-menu-target='moreControl'
-            class='toggle-menu-button'>Show more ↓</button>
+    <%= render 'shared/toggle_menu_buttons' %>
   </div>
 </div>
