feature(views/js/locals) refactore code, update local, use values

--- a/app/views/shared/_toggle_menu_buttons.html.erb
+++ b/app/views/shared/_toggle_menu_buttons.html.erb
@@ -1,8 +1,4 @@
 <button type="button" name="button"
-        data-action='toggle-menu#showLess'
-        data-toggle-menu-target='lessControl'
-        class='toggle-menu-button'><%= t '.show_less_button' %> ↑</button>
-<button type="button" name="button"
-        data-action='toggle-menu#showMore'
-        data-toggle-menu-target='moreControl'
-        class='toggle-menu-button'><%= t '.show_more_button' %> ↓</button>
+        data-action='toggle-menu#drawItems'
+        data-toggle-menu-target='toggleControl'
+        class='toggle-menu-button'></button>
