--- a/app/views/users/_seniorities.html.erb
+++ b/app/views/users/_seniorities.html.erb
@@ -1,6 +1,9 @@
 <div class="filter">
   <h6><%= t '.seniority_filter' %></h6>
-  <div data-controller='toggle-menu'>
+  <div data-controller='toggle-menu'
+       data-toggle-menu-visibility-value='false'
+       data-toggle-menu-more-button-value="<%= t(".show_more_button") %>"
+       data-toggle-menu-less-button-value="<%= t(".show_less_button") %>">
     <% seniorities.each do |key, filter| %>
       <div class="form-check seniority_filter_items" data-toggle-menu-target='item'>
         <input class="form-check-input" type="checkbox" value="<%= key %>"
