feature(views/js) create modal window

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,8 +23,8 @@
        </div>
       <% end %>
 
-      <%= render "users/listing", users: @users %>
-
+      <%= render 'users/listing', users: @users %>
+      <%= render 'users/modal' %>
     </div>
   </div>
 </div>
