--- a/app/views/users/_modal.html.erb
+++ b/app/views/users/_modal.html.erb
@@ -1,41 +1,46 @@
 <div id="app" data-controller='modal-initializer'>
-  <button data-action='click->modal-initializer#launchModal'> Launch modal</button>
+  <a href="#" class="text-info" data-action='click->modal-initializer#launchModal'>See</a>
 
   <div class="modal" data-controller='modal' data-modal-initializer-target='modal'>
     <div class="modal-dialog">
       <div class="modal-content">
-        <form>
-          <div class="modal-header">
-            <h5 class="modal-title">Modal title</h5>
-            <button type="button"
-                    class="btn-close"
-                    data-bs-dismiss="modal"
-                    data-action='click->modal#close'
-                    aria-label="Close"></button>
-          </div>
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  data-action='click->modal#close'
+                  aria-label="Close"></button>
+        </div>
+        <%= form_for user do |f| %>
           <div class="modal-body">
             <div class="mb-3">
-              <label for="inputName" class="form-label">Name</label>
-              <input type="text" class="form-control" id="inputName">
+              <%= f.label :name, class: 'form-label' %>
+              <%= f.text_field :name, class: 'form-control' %>
             </div>
             <div class="mb-3">
-              <label for="inputEmail" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
+              <%= f.label :email, class: 'form-label' %>
+              <%= f.text_field :email, class: 'form-control' %>
             </div>
             <div class="mb-3">
-              <label for="inputSeniority" class="form-label">Seniority</label>
-              <input type="text" class="form-control" id="inputSeniority">
+              <%= f.label :seniority, class: 'form-label' %>
+              <%= f.text_field :seniority, class: 'form-control' %>
             </div>
             <div class="mb-3">
-              <label for="inputCity" class="form-label">City</label>
-              <input type="text" class="form-control" id="inputCity">
+              <%= f.fields_for :city do |c| %>
+                <%= c.label :name, class: 'form-label' %>
+                <%= c.text_field :name, class: 'form-control' %>
+              <% end %>
             </div>
           </div>
           <div class="modal-footer">
-            <a href="" class="text-danger">Destroy</a>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <%= link_to 'Destroy', user,
+                                   method: :delete,
+                                   data: { confirm: 'Are you sure?' },
+                                   class: 'text-danger' %>
+            <%= f.submit 'Submit', class: 'btn btn-primary' %>
           </div>
-        </form>
+        <% end %>
       </div>
     </div>
   </div>
