--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,6 +24,7 @@
       <% end %>
 
       <%= render 'users/listing', users: @users %>
+      <%= link_to "Edit", edit_user_path(id: 5), data: { "turbo-frame": "modal" } %>
     </div>
   </div>
 </div>
