--- a/app/views/users/_listing.html.erb
+++ b/app/views/users/_listing.html.erb
@@ -13,7 +13,7 @@
         <span class="col-xl-3"><%= user.email %></span>
         <span class="col-xl-3"><%= user.seniority %></span>
         <span class="col-xl-3"><%= City.find(user.city_id).name %></span>
-        <span class="col-xl-1"><%= render 'users/modal', user: User.find(user.id) %></span>
+        <div class="col-xl-1"><%= link_to "Edit", edit_user_path(user.id), data: { "turbo-frame": "modal" } %></div>
       </div>
     <% end %>
   <% else %>
