--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New User</h1>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+<%= turbo_frame_tag 'modal' do %>
+  <%= render 'users/modal', user: @user,
+                            title: 'New User',
+                            disabled_status: false,
+                            action: params[:action] %>
+  <div class="modal-backdrop fade show"></div>
+<% end %>
