feature(app) use webpacker bootstrap and modal

--- a/app/frontend/stylesheets/users.scss
+++ b/app/frontend/stylesheets/users.scss
@@ -30,3 +30,12 @@
 #new-user-link {
   width: 140px;
 }
+
+.error-message {
+  font-size: 10px;
+  position: absolute;
+  bottom: 9%;
+  margin: 0;
+  right: 7%;
+  color: red;
+}
