--- a/app/views/users/_modal.html.erb
+++ b/app/views/users/_modal.html.erb
@@ -1,33 +1,45 @@
-<div class="modal show" data-controller='modal' style='display: block;'>
+<div id="myModal" data-controller='modal' class="modal" data-action='load@window->modal#open'>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title"><%= title %></h5>
         <button type="button"
                 class="btn-close"
-                data-bs-dismiss="modal"
                 data-action='click->modal#close'
+                data-bs-dismiss="modal"
                 aria-label="Close"></button>
       </div>
       <div>
         <%= form_for user do |f| %>
           <div class="modal-body">
-            <div class="mb-3">
-              <%= f.label :name, class: 'form-label' %>
-              <%= f.text_field :name, class: 'form-control', disabled: disabled_status %>
+            <div class="mb-3 position-relative">
+              <% if user.errors[:name] %>
+                <%= f.label :name, class: 'form-label' %>
+                <%= f.text_field :name, class: 'form-control', disabled: disabled_status %>
+              <% end %>
+              <span class="error-message"><%= user.errors[:name].first %></span>
             </div>
-            <div class="mb-3">
-              <%= f.label :email, class: 'form-label' %>
-              <%= f.text_field :email, class: 'form-control', disabled: disabled_status %>
+            <div class="mb-3 position-relative">
+              <% if user.errors[:email] %>
+                <%= f.label :email, class: 'form-label' %>
+                <%= f.text_field :email, class: 'form-control', disabled: disabled_status %>
+              <% end %>
+              <span class="error-message"><%= user.errors[:email].first %></span>
             </div>
-            <div class="mb-3">
-              <%= f.label :seniority, class: 'form-label' %>
-              <%= f.text_field :seniority, class: 'form-control', disabled: disabled_status %>
+            <div class="mb-3 position-relative">
+              <% if user.errors[:seniority] %>
+                <%= f.label :seniority, class: 'form-label' %>
+                <%= f.text_field :seniority, class: 'form-control', disabled: disabled_status %>
+              <% end %>
+              <span class="error-message"><%= user.errors[:seniority].first %></span>
             </div>
-            <div class="mb-3">
+            <div class="mb-3 position-relative">
               <%= f.fields_for :city do |c| %>
-                <%= c.label 'City name', class: 'form-label' %>
-                <%= c.text_field :name, class: 'form-control', disabled: disabled_status %>
+                <% if user.city.errors[:name] %>
+                  <%= c.label 'City name', class: 'form-label' %>
+                  <%= c.text_field :name, class: 'form-control', disabled: disabled_status %>
+                <% end %>
+                <span class="error-message"><%= user.city.errors[:name].first %></span>
               <% end %>
             </div>
           </div>
@@ -46,7 +58,10 @@
                                   class: 'btn btn-primary text-white' %>
             <% end %>
             <% if action == 'edit' || action == 'new' %>
-              <%= f.submit 'Submit', class: 'btn btn-primary', data: { 'action': 'click->modal#close' } %>
+              <%= f.submit 'Submit', class: 'btn btn-primary',
+                                     data: {
+                                       'turbo-frame': 'modal'
+                                    } %>
             <% end %>
           </div>
         <% end %>
