--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
-<div class="mx-5" data-controller='modal'>
+<div class="mx-5">
   <%= link_to 'Create user', new_user_path,
                              class: 'm-2 fixed-bottom btn btn-primary text-white',
                              id: 'new-user-link',
                              data: {
-                               'turbo-frame': 'modal',
-                               'action': 'click->modal#open'
+                               'turbo-frame': 'modal'
                              } %>
   <p id="notice"><%= notice %></p>
 
