--- a/app/views/users/_modal.html.erb
+++ b/app/views/users/_modal.html.erb
@@ -1,4 +1,4 @@
-<div id="myModal" data-controller='modal' class="modal" data-action='load@window->modal#open'>
+<div id="myModal" data-controller='modal' class="modal">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
